--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,1 +1,1 @@
-<div class="main-footer">family calander- your way to organize life</div>
+<div class="main-footer">Family Calendar - Keeping your family connected</div>
