--- a/src/app/features/shopping-list/shopping-list.css
+++ b/src/app/features/shopping-list/shopping-list.css
@@ -37,6 +37,8 @@
   list-style: disc inside;
   margin-bottom: 18px;
   padding-left: 0;
+  max-height: 500px;
+  overflow-y: auto;
 }
 .shopping-list-container li {
   padding: 6px 0;
